deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadastro-web
  labels:
    app.kubernetes.io/name: cadastro-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cadastro-web
  ports:
    - name: http
      port: 80
      targetPort: http # 8080 no container (nginx sem root)
